# spork-client

./: .clang-format  .gitignore  CMakeLists.txt  meson.build
src/: CMakeLists.txt  meson.build
src/app/: CMakeLists.txt  imageprovider.cpp  imageprovider.h  main.cpp  meson.build
src/app/resources/: resources.qrc
src/app/resources/qml/: main.qml
src/ffmpeg/: meson.build  platform_config.h  screen_recorder.cpp  screen_recorder.h
src/ffmpeg/not_ready/: format.h  main.c
src/screenrecorder/: CMakeLists.txt  meson.build  recorder.cpp  recorder.h  videoproducer.cpp  videoproducer.h  videosurface.h
src/screenrecorder/not_ready/: context.cpp  context.h  format.cpp  main.cpp  videosurface.cpp  videosurface.h
